fixed html file and added css file

--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -6,7 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Latest Mars Data</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="static/css/style.css">
+
 </head>
 
 <body>
@@ -17,32 +22,77 @@
     </div>
     <h2>Latest Mars News</h2>
     <h3>{{ mars_data.news_title }}</h3>
-    <h4>{{ mars_data.news_p }}</h4>
+    <p>{{ mars_data.news_p }}</p>
   </div>
 
   <div class="container">
     <div class="row">
 
-        <div class="col-lg-8">
+        <div class="col-md-8">
             <h2>Featured Mars Image</h2>
-            <img src="{{ mars_data.featured_image_url }}" alt="Featured Mars Image">
+            <img src="{{ mars_data.featured_image_url }}" class="smaller-square" alt="Featured Mars Image">
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-md-4">
             <div class="row" style="outline: auto">
                 <h3>Current Weather on Mars</h3>
-                <h4>{{ mars_data.mars_weather }}</h4>
+                <p>{{ mars_data.mars_weather }}</p>
             </div>
+            <br>
             <div class="row">
                 <h3>Mars Facts</h3>
-                <p>{{ mars_data.mars_fact_html_table}}</p>
+                <p>{{ mars_data.mars_fact_html_table |safe}}</p>
             </div>
         </div> 
 
     </div>
   </div>
 
-  <h1>{{ mars_data.hemisphere_image_urls }}</h1>
+ 
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="jumbotron jumbotron-fluid" id="trim">
+          
+            <h2 style="text-align: center;">Mars Hemispheres</h2>
+            <hr>
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="panel">
+                    <img src="{{ mars_data.hemisphere_image_urls.0.img_url }}"  class="square"  alt="Img 1">
+                    <h3 style="text-align: center;">{{ mars_data.hemisphere_image_urls.0.title }}</h3>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="panel">
+                    <img src="{{ mars_data.hemisphere_image_urls.1.img_url }}"  class="square"  alt="Img 2">
+                    <h3 style="text-align: center;">{{ mars_data.hemisphere_image_urls.1.title }}</h3>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="panel">
+                    <img src="{{ mars_data.hemisphere_image_urls.2.img_url }}"  class="square"  alt="Img 3">
+                    <h3 style="text-align: center;">{{ mars_data.hemisphere_image_urls.2.title }}</h3>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="panel">
+                    <img src="{{ mars_data.hemisphere_image_urls.3.img_url }}"  class="square"  alt="Img 4">
+                    <h3 style="text-align: center;">{{ mars_data.hemisphere_image_urls.3.title }}</h3>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          
+        </div>
+      </div>
+    </div>
+  </div>
 
 
               
